--- a/public/src/sass/abstract/_variables.scss
+++ b/public/src/sass/abstract/_variables.scss
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family=Playfair+Display&family=Qwitcher+Grypen:wght@700&display=swap');
 /*COLORES */
 
 $blanco: #fff;
@@ -19,7 +20,7 @@ $espaciadoPA: 1px;
 
 $letraPeque: 15px;
 $letraMediana: 20px;
-$letraH1secundario:50px;
+$letraH1secundario:20px;
 $letraTitulo: 4vmin;
 
 /*BORDES*/
