--- a/public/src/sass/layout/_body.scss
+++ b/public/src/sass/layout/_body.scss
@@ -2,18 +2,22 @@
     margin: 0;
     padding: 0;
     font-family: $tipografia;
+    //text-transform: uppercase;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none
+    
 }
 
 html,
 body {
     width: 100%;
     overflow-x: hidden;
+    background-color: #f0f0f0;
     @include min(ordenador-4k) {
         width: 80%;
         margin: auto;
 
     }
+    
 }
