--- a/public/src/sass/layout/_header.scss
+++ b/public/src/sass/layout/_header.scss
@@ -2,7 +2,7 @@
 * .inicio es el div de la pagina principal
 */
 .inicio {
-    //height: 100vh;
+    /*Contenedor del header del inicio*/
     background-image: linear-gradient(rgba(50, 28, 61, 1), rgba(0, 0, 0, 0.70)), url(http://localhost/PROYECTO_ZESARI/public/src/img/fondoInicio.jpg);
     background-position: bottom;
     background-size: cover;
@@ -13,26 +13,38 @@
     margin-top: 0;
 
     @include max(movil-max) {
+        align-items:normal;
         height: 90vh;
-
     }
 
     @include between(tablet-min, portatil-L) {
-        height: 100vh;
+        height: 90vh;
     }
 
-    // @include ordenador-4k(ordenador-4k) {
-    //     // height: 70vh;
-    // }
+    @include min(ordenador-4k) {
+        height: 50vh;
+    }
+
     .header-contenido {
         color: $blanco;
         text-align: center;
         width: 50%;
-        margin-top: 100px;
 
         @include max(movil-max) {
             width: 80%;
             margin-top: 90px;
+        }
+
+        h1 {
+            text-transform: uppercase;
+            font-size: 5vmin;
+            letter-spacing: $espaciadoPA;
+            word-spacing: 0.25em;
+            padding: 10px;
+
+             @include min(ordenador-4k) {
+                font-size: 40px;
+            }
         }
 
         p {
@@ -41,23 +53,10 @@
             color: $blanco;
             letter-spacing: $espaciadoPA;
 
-            // @include movil(movil-max) {
-            //     font-size: $letraPeque;
-            // }
-
-            // @include ordenador-max(tablet-min, portatil-L) {
-            //     font-size: $letraMediana;
-            // }
+            @include between(tablet-min, portatil-L) {
+                font-size: 3vmin;
+            }
         }
-
-        h1 {
-            text-transform: uppercase;
-            font-size: $letraTitulo;
-            letter-spacing: $espaciadoH1;
-            word-spacing: 0.25em;
-            padding: 10px;
-        }
-
 
         a {
             color: $blanco;
@@ -72,15 +71,6 @@
                 background-color: rgba(217, 103, 4, 0.719);
             }
 
-            // @include movil-max(movil-max) {
-            //     font-size: $letraPequeña;
-            // }
-
-            // @include ordenador-max(tablet-min, portatil-L) {
-            //     font-size: $letraMediana;
-
-            // }
-
         }
     }
 }
@@ -88,120 +78,176 @@
 
 
 /*HEADER DE RESTO DE PÁGINAS*/
-
-@mixin secundario {
+.header-secundario-clases{
+    background-image: url(http://localhost/PROYECTO_ZESARI/public/src/img/pelota-de-fitness.png);
     margin-top: 0px;
-    z-index: -1000;
     text-align: center;
     width: 100%;
-    height: 400px;
-    background-size: cover;
+    height: 250px;
+    background-size: 400px;
+    background-position: 80% 20px;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    position: relative;
-    overflow: hidden;
-    border-radius: 0 0 85% 85% / 30%;
-    @include max(movil-max) {
-        height: 300px;
-    }
     
-
     .overlay {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        text-align: left;
+        align-items: center;
         width: 100%;
         height: 100%;
         padding: 100px;
-        color: #FFF;
-        text-shadow: 1px 1px 1px #333;
-        background-image: linear-gradient(rgba(50, 28, 61, 0.40), rgba(0, 0, 0, 0.40));
-
-        h1 {
-            font-size: 60px;
-            margin-bottom: 30px;
-            @include max(movil-max) {
-                font-size: $letraTitulo;
-            }
+        opacity: 0.75;
+        background-color:$paleta1;
         
+
+        @include max(movil-max) {
+            width: 100%;
+        }
+        
+        h1 {
+            font-family: 'Playfair Display', serif;
+            font-weight: 200;
+            color: white;
+            font-size: 60px;
+            margin: auto;
+            text-align: center;
+
+            @include max(movil-max) {
+                font-size: 40px;
+        
+            }
         }
 
-        h3,
-        p {
-            margin-bottom: 30px;
+         p {
+            font-style: italic;
+            color: white;
         }
     }
 
 }
 
-// IMAGENES PARA CADA PAGAINA DEL MENÚ DE NAVEGACION
-.header-secundario-sobreNosotros {
-    background-image: linear-gradient(rgba(50, 28, 61, 0.40), rgba(0, 0, 0, 0.40)), url(http://localhost/PROYECTO_ZESARI/public/src/img/fondoSobreNosotros.jpg);
-    @include secundario();
+.header-secundario-equipo {
+    background-image:linear-gradient(rgba(50, 28, 61, 0.40), rgba(0, 0, 0, 0.40)), url(http://localhost/PROYECTO_ZESARI/public/src/img/fondoEntrenadores.jpg);
+    width: 100%;
+    margin-top: 0;
+    background-color: $paleta2;
+    background-size: 750px;
+    background-position: 100% 0px;
+    background-repeat: no-repeat;
+    height: 100%;
+
+    @include max(movil-max) {
+        background-image:linear-gradient(rgba(50, 28, 61, 0.40), rgba(0, 0, 0, 0.40)), url(http://localhost/PROYECTO_ZESARI/public/src/img/fondoContacto.jpg);
+
+    }
+
+    @include between(tablet-min, portatil-L) {
+        width: 100%;
+    }
+
+    .overlay {
+        display: flex;
+        flex-direction: column;
+        background-color: $paleta1;
+        width: 750px;  
+        padding: 90px 90px;
+        opacity: 0.75;
+
+        @include max(tablet-min) {
+            padding: 10px;
+            width: 100%;  
+            height: 69vh;
+        }
+    
+        @include min(portatil-L) {
+            width: 900px; 
+        }
+
+        h1 {
+            font-family: 'Playfair Display', serif;
+            font-weight: 200;
+            color: white;
+            font-size: 60px;
+            margin: auto;
+            text-align: center;
+
+            @include max(movil-max) {
+                font-size: 40px;
+        
+            }
+        }
+
+         p {
+            font-style: italic;
+            color: white;
+        }
+    }
 }
 
 .header-secundario-blog {
+    background-image:linear-gradient(rgba(50, 28, 61, 0.40), rgba(0, 0, 0, 0.40)),  url(http://localhost/PROYECTO_ZESARI/public/src/img/fondoBlog2.jpg);
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    background-repeat: no-repeat;
+
+    .overlay {
+        padding: 40px;
+
+        h1 {
+            font-family: 'Playfair Display', serif;
+            font-weight: 200;
+            color: $blanco;
+            font-size: 60px;
+            opacity: 100% !important;
+            text-align: center;
+        }
+
+         p {
+       
+            font-style: italic;
+        }
+    }
+}
+
+.header-secundario-sobreNosotros {
     background-image: linear-gradient(rgba(50, 28, 61, 0.40), rgba(0, 0, 0, 0.40)), url(http://localhost/PROYECTO_ZESARI/public/src/img/fondoSobreNosotros.jpg);
-    @include secundario();
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    background-repeat: no-repeat;
+
+    .overlay {
+        padding: 40px;
+        background-color: $paleta1;
+        opacity: 0.75;
+
+        h1 {
+            font-family: 'Playfair Display', serif;
+            font-weight: 200;
+            color: $blanco;
+            font-size: 60px;
+            opacity: 100% !important;
+            text-align: center;
+        }
+
+         h2 {
+            font-family: 'Playfair Display', serif;
+            font-weight: 200;
+            color: $blanco;
+            font-style: italic;
+            text-align: center;
+        }
+    }
 }
-
-// /*HEADERS NAVEGACION*/
-// .nav-clases {
-//     background-image: linear-gradient(rgba(50, 28, 61, 0.40), rgba(0, 0, 0, 0.40)), url(http://localhost/PROYECTO_ZESARI-main/public/src/img/fondoClases.jpg);
-
-//     // @include ordenador-4k(ordenador-4k) {
-//     //     background-image: linear-gradient(rgba(50,28,61), rgba(0, 0, 0, 0.70)), url(http://localhost/PROYECTO_ZESARI-main/public/src/img/fondoClases.jpg);
-//     // }
-//     @include secundario();
-
-// }
-
-// .nav-equipo {
-//     background-image: linear-gradient(rgba(50, 28, 61, 0.40), rgba(0, 0, 0, 0.40)), url(http://localhost/PROYECTO_ZESARI-main/public/src/img/fondoEquipo.jpg);
-//     // @include ordenador-4k(ordenador-4k) {
-//     //     background-image: linear-gradient(rgba(50,28,61), rgba(0, 0, 0, 0.70)), url(http://localhost/PROYECTO_ZESARI-main/public/src/img/fondoClases.jpg);
-//     // }
-//     @include secundario();
-
-// }
-
-
-// .imagen-fondo {
-//     background-image: linear-gradient(rgba(50, 28, 61, 0.40), rgba(0, 0, 0, 0.40)), url(http://localhost/PROYECTO_ZESARI-main/public/src/img/fondoSobreNosotros.jpg);
-//     // @include ordenador-4k(ordenador-4k) {
-//     //     background-image: linear-gradient(rgba(50,28,61), rgba(0, 0, 0, 0.70)), url(http://localhost/PROYECTO_ZESARI-main/public/src/img/fondoClases.jpg);
-//     // }
-//     @include secundario();
-
-// }
-
-
-
-// .nav-blog {
-//     background-image: linear-gradient(rgba(50, 28, 61, 0.40), rgba(0, 0, 0, 0.40)), url(http://localhost/PROYECTO_ZESARI-main/public/src/img/fondoBlog.jpg);
-//     // @include ordenador-4k(ordenador-4k) {
-//     //     background-image: linear-gradient(rgba(50,28,61), rgba(0, 0, 0, 0.70)), url(http://localhost/PROYECTO_ZESARI-main/public/src/img/fondoClases.jpg);
-//     // }
-//     @include secundario();
-
-// }
-
-.header-secundario-contacto {
-    background-image: linear-gradient(rgba(50, 28, 61, 0.40), rgba(0, 0, 0, 0.40)), url(http://localhost/PROYECTO_ZESARI/public/src/img/fondoContacto.jpg);
-    // @include ordenador-4k(ordenador-4k) {
-    //     background-image: linear-gradient(rgba(50,28,61), rgba(0, 0, 0, 0.70)), url(http://localhost/PROYECTO_ZESARI-main/public/src/img/fondoClases.jpg);
-    // }
-    @include secundario();
-
-}
-
 
 /*HEADER DEL SUBMENU*/
 .header-submenu {
     z-index: -1000;
     text-align: center;
     width: 100%;
-    height: 300px;
+    height: auto;
     background: rgb(50, 28, 61);
     background: radial-gradient(circle, rgba(50, 28, 61, 1) 50%, rgba(132, 119, 140, 1) 80%, rgba(217, 103, 4, 1) 120%);
 
@@ -209,6 +255,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         width: 100%;
         height: 100%;
         color: #FFF;
@@ -216,7 +263,7 @@
 
         h1 {
             font-size: $letraH1secundario;
-            margin-top: 30px;
+            padding: 30px;
 
         }
 
