--- a/public/src/sass/layout/_paginasSecundarias.scss
+++ b/public/src/sass/layout/_paginasSecundarias.scss
@@ -1,138 +1,302 @@
-.blogs, .clases, .equipo {
+ .clases{
+    width: 100%;
     display: grid;
-    padding: 10px;
+    padding: 20px;
+    margin-top: 70px;
     grid-template-columns: 1fr 1fr 1fr;
-
-    @include max(tablet-min) {
+    place-items: center;
+    
+    @include max(movil-max) {
         grid-template-columns: 1fr;
     }
 
-    // @include ordenador-max(tablet-min, portatil-L) {
-    //     grid-template-columns: 1fr 1fr;
-
-    // }
-
+    @include between(movil-max, tablet-min) {
+        grid-template-columns: 1fr 1fr;
+    }
     .caja {
-        width: 350px;
-        height: 490px;
-        margin: 20px;
-        padding: 15px;
-        background-color: rgb(243, 240, 240);
-        box-shadow: 0 4px 14px hsl(355deg 25% 15% / 10%);
-        border-radius: 0.5rem;
-
-        img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            object-position: center;
-            border-radius: 0.5rem;
-        }
-      
+        width: 250px;
+        height: 450px;
+        margin: 15px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        background-color: $blanco;
+            img {
+                width: 100%;
+                height: 350px;
+                object-fit: cover;
+                object-position: center;
+                z-index: -1000px;  
+            }
+    
+            &:hover {
+                transition: all 0.25s;
+                transform: scale(1.025);
+            }
         .contenido {
             text-align: center;
-            padding: 20px;
+            height: 100px;
+            padding: 5px 20px;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-
-            // h5 {
-            //     font-size: 20px;
-            //     padding-bottom: 20px;
-            // }
-
-           .post-redes {
-                a {
-                    padding: 10px;
-                    font-size: 30px;
-                    color: $negro;
-
-                    &:hover {
-                        color: #636262;
-                    }
-                }
-
-           }
-            
-                
-            
+            justify-content: space-evenly;
+            align-items: center;
+        
             .post-title {
                 font-size: 1.3rem;
-                font-weight: 600;
                 color: $negro;
                 display: -webkit-box;
                 -webkit-line-clamp:2;
                 -webkit-box-orient: vertical;
                 overflow: hidden;
-            }
 
-            .post-saber {
-                background-color: $paleta3;
-                border-radius: 10px;
-                padding: 10px;
-                 color: $blanco;
-            }
-            .post-date {
-                display: flex;
-                font-size: 0.875rem;
-                text-transform: uppercase;
-                font-weight: 400;
-                margin-top: 4px;
-            }
-
-            .post-description {
-                font-size: 0.9rem;
-                line-height: 1.5rem;
-                margin: 5px 0 10px;
-                display: -webkit-box;
-                -webkit-line-clamp:3;
-                -webkit-box-orient: vertical;
-                overflow: hidden;
-            }
-
-            .profile {
-                display: flex;
-                align-items: center;
-                gap:10px;
-
-                .profile-img {
-                    width:35px;
-                    height: 35px;
-                    border-radius: 50%;
-                    object-fit: cover;
-                    object-position: center;
-                    border: 2px solid black;
-                }
-            }
-            
+                
+            } 
         }
-
-
-        // &:hover {
-        //     box-shadow: 5px 5px 20px;
-        //     transform: translateY(-3%);
-        // }
     }
 }
 
 
-/*VER BLOG*/
+/*EQUIPO*/
+
+.equipo{
+    display: grid;
+    padding: 20px;
+    grid-template-columns: 1fr;
+    place-items: center;
+    width: 100%;
+
+    @include max(tablet-min) {
+        grid-template-columns: 1fr;
+        
+    }
+
+    .caja {
+        display: flex;
+        padding: 30px;
+        width: 100%;
+        height: auto;
+        margin: 15px;
+        background-color: $blanco;
+        box-shadow: 0 4px 14px hsl(355deg 25% 15% / 10%);
+        border-radius: 0.5rem;
+
+        @include max(tablet-min) {
+            flex-direction: column;
+        }
+
+        .subcaja1 {
+            margin: auto;
+
+            img {
+                width: 250px;
+                clip-path: circle(50%);
+                object-fit: cover;
+                object-position: center;
+                z-index: -1000px;
+
+                @include max(movil-max) {
+                    width: 100%;
+                }       
+            }
+
+            .contenido {
+                text-align: center;
+                height: 100px;
+                padding: 5px 20px;
+                display: flex;
+                flex-direction: column;
+               justify-content: space-evenly;
+                align-items: center;
+            
+               .post-redes {
+                    a {
+                        padding: 10px;
+                        font-size: 20px;
+                        color: $negro;
+    
+                        &:hover {
+                            color: #636262;
+                        }
+                    }
+    
+               }
+                 
+                .post-title {
+                    font-size: 1.3rem;
+                    color: $negro;
+                    display: -webkit-box;
+                    -webkit-line-clamp:2;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                }
+    
+                .profile {
+                    display: flex;
+                    align-items: center;
+                    gap:10px;
+    
+                    .profile-img {
+                        width:35px;
+                        height: 35px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                        object-position: center;
+                        border: 2px solid black;
+                    }
+                }
+                
+            }
+        }
+
+        .subcaja2{
+            padding: 30px;
+
+            .post-description:nth-child(1) {
+                font-weight: bold;
+                font-size: 20px;
+                margin-bottom: 20px;
+            }
+        }
+    }
+}
+
+/*BLOG*/
+.blogs{
+    width: 100%;
+    display: grid;
+    padding: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+    place-items: center;
+
+    @include max(tablet-min) {
+        grid-template-columns: 1fr;
+    }
+
+    .caja {
+        height: 250px;
+        margin: 15px;
+        position: relative;
+        display: inline-block;
+        overflow: hidden; /* Asegura que el texto no se desborde fuera de la imagen */
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+            z-index: -1000px;     
+        }
+
+        
+        &:hover .texto-hover {
+            opacity: 1;
+            }
+    
+        .texto-hover {
+            position: absolute;
+            display: flex;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-position: center;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 10px;
+            box-sizing: border-box;
+            opacity: 0;
+            transition: opacity 0.3s ease-in-out;}
+
+        .post-title {
+            font-size: 1.3rem;
+            margin: auto;
+            text-align: center;
+            color: $blanco;
+            display: -webkit-box;
+            -webkit-line-clamp:2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;     
+        }
+            
+    }
+}
+
+/*QUIENES SOMOS*/
+#sobreNosotros {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    h1 {
+        color: #D96704;
+        font-size: 40px;
+    }
+
+    .caja {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+       
+        @include max(tablet-min) {
+            flex-direction: column;
+        }
+
+        .texto {
+            width: 80%;
+            padding: 20px;
+
+            p {
+                margin-bottom: 50px;
+                line-height: 1.5
+            }
+        }
+
+        .imagen {
+            width: 500px;
+            padding: 20px;
+            @include max(movil-max) {
+                width: 400px;
+            }
+
+            img {
+                width: 100%;
+            }
+        }
+
+        &:nth-child(3) {
+            text-align: center;
+            
+            blockquote {
+                width: 78%;
+                border-top: 3px solid #D96704;
+                border-bottom: 3px solid #D96704;
+                padding: 40px;
+                margin: 10px;
+            }
+        }
+    }
+}
+
 
 .migas {
-    background-color: rgb(255, 255, 255);
-    padding: 40px;
+    background-color: #ffffff;
+    padding: 10px;
     display: flex;
     align-items: center;
     a, span {
         font-size: 20px;
         padding: 10px;
-        color: #000000;
+        color: #000000 !important; 
     }
 
 }
 
+/*VER BLOG*/
+
 .post-header {
-    // margin-top: 300px;
     width: 100%;
     height: 500px;
     background-color: #321c3d;
