--- a/public/src/sass/estilo.css
+++ b/public/src/sass/estilo.css
@@ -160,7 +160,7 @@ header .mostrar {
 */
 .inicio {
   /*Contenedor del header del inicio*/
-  background-image: linear-gradient(rgb(50, 28, 61), rgba(0, 0, 0, 0.7)), url(http://localhost/PROYECTO_ZESARI/public/src/img/fondoInicio.jpg);
+  background-image: linear-gradient(rgb(50, 28, 61), rgba(0, 0, 0, 0.7)), url(http://empresazesari.com/src/img/fondoInicio.jpg);
   background-position: bottom;
   background-size: cover;
   width: 100%;
@@ -240,7 +240,7 @@ header .mostrar {
 
 /*HEADER DE RESTO DE PÁGINAS*/
 .header-secundario-clases {
-  background-image: url(http://localhost/PROYECTO_ZESARI/public/src/img/pelota-de-fitness.png);
+  background-image: url(http://empresazesari.com/src/img/pelota-de-fitness.png);
   margin-top: 0px;
   text-align: center;
   width: 100%;
@@ -287,7 +287,7 @@ header .mostrar {
 }
 
 .header-secundario-equipo {
-  background-image: linear-gradient(rgba(50, 28, 61, 0.4), rgba(0, 0, 0, 0.4)), url(http://localhost/PROYECTO_ZESARI/public/src/img/fondoEntrenadores.jpg);
+  background-image: linear-gradient(rgba(50, 28, 61, 0.4), rgba(0, 0, 0, 0.4)), url(http://empresazesari.com/src/img/fondoEntrenadores.jpg);
   width: 100%;
   margin-top: 0;
   background-color: #84778C;
@@ -300,7 +300,7 @@ header .mostrar {
 }
 @media only screen and (max-width: 767px) {
   .header-secundario-equipo {
-    background-image: linear-gradient(rgba(50, 28, 61, 0.4), rgba(0, 0, 0, 0.4)), url(http://localhost/PROYECTO_ZESARI/public/src/img/fondoContacto.jpg);
+    background-image: linear-gradient(rgba(50, 28, 61, 0.4), rgba(0, 0, 0, 0.4)), url(http://empresazesari.com/src/img/fondoContacto.jpg);
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1440px) {
@@ -350,7 +350,7 @@ header .mostrar {
 }
 
 .header-secundario-blog {
-  background-image: linear-gradient(rgba(50, 28, 61, 0.4), rgba(0, 0, 0, 0.4)), url(http://localhost/PROYECTO_ZESARI/public/src/img/fondoBlog2.jpg);
+  background-image: linear-gradient(rgba(50, 28, 61, 0.4), rgba(0, 0, 0, 0.4)), url(http://empresazesari.com/src/img/fondoBlog2.jpg);
   width: 100%;
   height: 100%;
   background-color: white;
@@ -372,7 +372,7 @@ header .mostrar {
 }
 
 .header-secundario-sobreNosotros {
-  background-image: linear-gradient(rgba(50, 28, 61, 0.4), rgba(0, 0, 0, 0.4)), url(http://localhost/PROYECTO_ZESARI/public/src/img/fondoSobreNosotros.jpg);
+  background-image: linear-gradient(rgba(50, 28, 61, 0.4), rgba(0, 0, 0, 0.4)), url(http://empresazesari.com/src/img/fondoSobreNosotros.jpg);
   width: 100%;
   height: 100%;
   background-color: white;
@@ -1013,9 +1013,9 @@ main .main-contenido #contactaIndex .caja a:hover {
   flex-direction: row;
   justify-content: space-around;
   width: 100%;
-  /*Es la resolución entre dos medidas*/
+  /*Es la resolución maxima de un dispositivo*/
 }
-@media only screen and (min-width: 767px) and (max-width: 1279px) {
+@media only screen and (max-width: 767px) {
   #verUsuario {
     flex-direction: column;
   }
